added an external method requestInt that uses recursion

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "App",
             "request": "launch",
             "mainClass": "App",
+            "projectName": "COMP1010-2024-Assignment_10d1972c"
+        },
+        {
+            "type": "java",
+            "name": "App",
+            "request": "launch",
+            "mainClass": "App",
             "projectName": "COMP1010-2024-Assignment_f03ff5d5"
         },
         {
