--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ActionsTest",
+            "request": "launch",
+            "mainClass": "main.ActionsTest",
+            "projectName": "COMP1010-2024-Assignment_10d1972c"
+        },
+        {
+            "type": "java",
             "name": "App",
             "request": "launch",
             "mainClass": "main.App",
